@@ -6,4 +6,8 @@ Changelog
 * Use poolboy to manage eval server
 
 11th August
-* Change jqconsole.js to  jquery-console instead
+* Fix for bug inside eval.ex
+
+
+14th August
+* Change jqconsole.js to jquery-console instead
